# ms

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  conanfile.py
.devcontainer/: devcontainer.json
src/: main.cpp
src/api/: connection_manager.hpp  request_dispatcher.hpp  responses.hpp
src/api/handler/: book_seat_handler.hpp  choose_seat_handler.hpp  choose_theater_handler.hpp  health_handler.hpp  root_handler.hpp
src/api/response/: choose_seat_response.hpp  choose_theater_response.hpp  health_response.hpp  welcome_response.hpp
src/api/serializer/: html_serializer.hpp
src/service/: booking_service.hpp  booking_service_impl.cpp  booking_service_impl.hpp  show_manager.hpp  show_manager_impl.cpp  show_manager_impl.hpp  theater_manager.hpp  theater_manager_impl.cpp  theater_manager_impl.hpp
src/service/model/: movie.hpp  seat.hpp
test/api/: connection_manager_test.cpp  request_dispatcher_test.cpp
test/api/handler/: book_seat_handler_test.cpp  choose_seat_handler_test.cpp  health_handler_test.cpp  root_handler_test.cpp
test/service/: booking_service_impl_test.cpp  show_manager_impl_test.cpp  theater_manager_impl_test.cpp
test_package/: conanfile.py
